[FIX] Correcting alignment in the Home component.

--- a/OuviP2/src/app/header/header.component.css
+++ b/OuviP2/src/app/header/header.component.css
@@ -69,6 +69,9 @@ li a .loginbtn , img{
 }
 
 @media (max-width: 470px) {
+    nav{
+        margin-bottom: 5rem;
+    }
     .iconNav h2{
         font-size: medium;
         margin-left: 0.2rem;
@@ -95,5 +98,6 @@ li a .loginbtn , img{
 @media (max-width: 360px) {
     nav{
         padding: 1rem 1rem;
+        margin-bottom: 7rem;
     }
 }
