--- a/OuviP2/src/app/home/home.component.css
+++ b/OuviP2/src/app/home/home.component.css
@@ -1,3 +1,11 @@
+main{
+    margin-top: 3rem;
+    height: 65vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 main .welcome-content{
     height: 100%;
     display: flex;
@@ -43,6 +51,11 @@ img{
     }
 }
 @media (max-width: 737px) {
+    main{
+        padding-top: 6rem;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
     .welcome-content{
         flex-direction: column;
     }
